# msa

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  config-msa.json  config-set.json  msa.cpp
